--- a/index.html
+++ b/index.html
@@ -96,42 +96,42 @@
 		</aside>
 </section>
 
-  <!--
-<nav role="navigation" id="nav">
-  <ul class="tabs">
-    <li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
-      <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
-       xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-       x="0px" y="0px" width="22.095px" height="15.503px" viewBox="0 0 22.095 15.503" enable-background="new 0 0 22.095 15.503"
-       xml:space="preserve">
-        <g>
-          <g>
-            <polygon fill="#FFFFFF" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
-          </g>
-        </g>
-      </svg>
-      </a>
-      <a href="#s-sign" id="signers" class="signers">
+
+<section class="head" id="rules">
+  <nav role="navigation" id="nav">
+    <ul class="tabs">
+      <li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
         <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-         x="0px" y="0px" width="24px" height="16.634px" viewBox="0 0 24 16.634" enable-background="new 0 0 24 16.634"
+         x="0px" y="0px" width="22.095px" height="15.503px" viewBox="0 0 22.095 15.503" enable-background="new 0 0 22.095 15.503"
          xml:space="preserve">
           <g>
             <g>
-              <polygon fill="#FFFFFF" points="19.385,16.634 24,12.018 11.993,0 0,11.998 4.616,16.614 12,9.05 		" />
+              <polygon fill="#FFFFFF" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
             </g>
           </g>
         </svg>
-    </a></li>
-	<li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">text</a>
-      <a href="#content" id="texts" class="texts">text</a></li>
-    <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">sons</a>
-      <a href="#s-liter" id="liters" class="liters">sons</a></li>
-    <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">film</a>
-      <a href="#s-video" id="vids" class="vids">film</a></li>
-  </ul>
-  </nav>-->
-<section class="head" id="rules">
+        </a>
+        <a href="#s-sign" id="signers" class="signers">
+          <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
+           xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+           x="0px" y="0px" width="24px" height="16.634px" viewBox="0 0 24 16.634" enable-background="new 0 0 24 16.634"
+           xml:space="preserve">
+            <g>
+              <g>
+                <polygon fill="#FFFFFF" points="19.385,16.634 24,12.018 11.993,0 0,11.998 4.616,16.614 12,9.05 		" />
+              </g>
+            </g>
+          </svg>
+      </a></li>
+    <li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">Writings</a>
+        <a href="#content" id="texts" class="texts">Writings</a></li>
+      <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">Filming</a>
+        <a href="#s-liter" id="liters" class="liters">Filming</a></li>
+      <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">Say</a>
+        <a href="#s-video" id="vids" class="vids">Say</a></li>
+    </ul>
+    </nav>
 
 
 		<header role="banner">
@@ -154,11 +154,7 @@
 			<ul id="think" class="request">
 				<li><a id="tree" class="tree">Preparatory video</a></li>
 				<li><a id="trees" class="trees">Hide this content</a></li>
-        <li><img class="rules" src="images/writings.svg" alt="WRITINGS"></li>
-        <li><img class="rules" src="images/filming.svg" alt="FILMING"></li>
-        <li><img class="rules" src="images/say.svg" alt="SAY"></li>
       </ul>
-
           <figure>
             <p class="inners">Current project writing and production  :<a class="inners" href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
           </figure>
@@ -166,7 +162,7 @@
 
 <section class="inner">
 			<figure>
-         <p><img src="images/MJ2425.svg" alt="master juillet 24/25"></p>
+         <p>MASTER JUILLET 2024/25</p>
 			</figure>
 
 			<aside id="press">
