--- a/index.html
+++ b/index.html
@@ -95,10 +95,19 @@
 			</article>
 		</aside>
 </section>
-
-
 <section class="head" id="rules">
-  <nav role="navigation" id="nav">
+<nav role="navigation" id="nav">
+  <ul class="tabs">
+  <li id="text"><a style="display:none" href="#s-text" id="txt" class="txt"></a>
+      <a href="#content" id="texts" class="texts"></a></li>
+    <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter"></a>
+      <a href="#s-liter" id="liters" class="liters"></a></li>
+    <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid"></a>
+      <a href="#s-video" id="vids" class="vids"></a></li>
+  </ul>
+  </nav>
+
+  <nav role="navigation" id="navA">
     <ul class="tabs">
       <li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
         <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
@@ -215,7 +224,7 @@
 	</aside>
   <section id="s-signA">
   	    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
-
+<div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
   	  <figure>
             <h1>02</h1>
       </figure>
@@ -299,7 +308,7 @@
 
 <section id="s-liter"  class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-
+<div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
   </aside>
 <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
@@ -326,7 +335,7 @@
 </aside>
 <section id="s-signC">
     <aside class="pageC"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
-
+<div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
   <figure>
         <h1>1.3</h1>
   </figure>
