--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 			</article>
 		</aside>
 </section>
+
+	<!--  TODO CONTENT -->
 <section class="head" id="rules">
 <nav role="navigation" id="nav">
   <ul class="tabs">
@@ -106,7 +108,7 @@
       <a href="#s-video" id="vids" class="vids"></a></li>
   </ul>
   </nav>
-
+	<!--  TODO CONTENT -->
   <nav role="navigation" id="navA">
     <ul class="tabs">
       <li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
