--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 
 	<!--  TODO CONTENT -->
 <section class="head" id="rules">
-<nav role="navigation" id="nav">
+<nav role="navigation">
   <ul class="tabs">
-  <li id="text"><a style="display:none" href="#s-text" id="txt" class="txt"></a>
-      <a href="#content" id="texts" class="texts"></a></li>
-    <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter"></a>
-      <a href="#s-liter" id="liters" class="liters"></a></li>
-    <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid"></a>
-      <a href="#s-video" id="vids" class="vids"></a></li>
+  <li id="1"><a style="display:none" href="#"></a>
+      <a href="#"></a></li>
+    <li id="2"><a style="display:none" href="#"></a>
+      <a href="#"></a></li>
+    <li id="3"><a style="display:none" href="#"></a>
+      <a href="#"></a></li>
   </ul>
   </nav>
 	<!--  TODO CONTENT -->
