--- a/index.html
+++ b/index.html
@@ -96,55 +96,7 @@
 		</aside>
 </section>
 
-	<!--  TODO CONTENT -->
 <section class="head" id="rules">
-<nav role="navigation" id="nav">
-  <ul class="tabs">
-  <li id="1"><a style="display:none" href="#s-text" id="txt" class="txt"></a>
-      <a href="#" id="texts" class="texts"></a></li>
-    <li id="2"><a style="display:none" href="#s-liter" id="liter" class="liter"></a>
-      <a href="#s-liter" id="liters" class="liters"></a></li>
-    <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid"></a>
-      <a href="#s-video" id="vids" class="vids"></a></li>
-  </ul>
-  </nav>
-	<!--  TODO CONTENT -->
-  <nav role="navigation" id="navA">
-    <ul class="tabs">
-      <li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
-        <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
-         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-         x="0px" y="0px" width="22.095px" height="15.503px" viewBox="0 0 22.095 15.503" enable-background="new 0 0 22.095 15.503"
-         xml:space="preserve">
-          <g>
-            <g>
-              <polygon fill="#FFFFFF" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
-            </g>
-          </g>
-        </svg>
-        </a>
-        <a href="#s-sign" id="signers" class="signers">
-          <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
-           xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
-           x="0px" y="0px" width="24px" height="16.634px" viewBox="0 0 24 16.634" enable-background="new 0 0 24 16.634"
-           xml:space="preserve">
-            <g>
-              <g>
-                <polygon fill="#FFFFFF" points="19.385,16.634 24,12.018 11.993,0 0,11.998 4.616,16.614 12,9.05 		" />
-              </g>
-            </g>
-          </svg>
-      </a></li>
-    <li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">Writings</a>
-        <a href="#content" id="texts" class="texts">Writings</a></li>
-      <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">Filming</a>
-        <a href="#s-liter" id="liters" class="liters">Filming</a></li>
-      <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">Say</a>
-        <a href="#s-video" id="vids" class="vids">Say</a></li>
-    </ul>
-    </nav>
-
-
 		<header role="banner">
 			<ul id="video" class="request">
 				<li><a id="vim" class="vim">
@@ -166,16 +118,57 @@
 				<li><a id="tree" class="tree">Preparatory video</a></li>
 				<li><a id="trees" class="trees">Hide this content</a></li>
       </ul>
-          <figure>
-            <p class="inners">Current project writing and production  :<a class="inners" href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
-          </figure>
+      <nav role="navigation" id="nav">
+      <ul class="tabs">
+      <li id="1"><a style="display:none" href="#s-text" id="txt" class="txt"></a>
+      <a href="#" id="texts" class="texts"></a></li>
+      <li id="2"><a style="display:none" href="#s-liter" id="liter" class="liter"></a>
+      <a href="#s-liter" id="liters" class="liters"></a></li>
+      <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid"></a>
+      <a href="#s-video" id="vids" class="vids"></a></li>
+      </ul>
+      </nav>
+      <!--  TODO CONTENT -->
+      <nav role="navigation" id="navA">
+        <ul class="tabs">
+          <li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
+            <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
+             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+             x="0px" y="0px" width="22.095px" height="15.503px" viewBox="0 0 22.095 15.503" enable-background="new 0 0 22.095 15.503"
+             xml:space="preserve">
+              <g>
+                <g>
+                  <polygon fill="#FFFFFF" points="11.095,7.206 4.326,0.272 0.095,4.504 11.089,15.502 22.095,4.486 17.864,0.255 		" />
+                </g>
+              </g>
+            </svg>
+            </a>
+            <a href="#s-sign" id="signers" class="signers">
+              <svg version="1.1" xmlns:x="&ns_extend;" xmlns:i="&ns_ai;" xmlns:graph="&ns_graphs;"
+               xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+               x="0px" y="0px" width="24px" height="16.634px" viewBox="0 0 24 16.634" enable-background="new 0 0 24 16.634"
+               xml:space="preserve">
+                <g>
+                  <g>
+                    <polygon fill="#FFFFFF" points="19.385,16.634 24,12.018 11.993,0 0,11.998 4.616,16.614 12,9.05 		" />
+                  </g>
+                </g>
+              </svg>
+          </a></li>
+        <li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">Writings</a>
+            <a href="#content" id="texts" class="texts">Writings</a></li>
+          <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">Filming</a>
+            <a href="#s-liter" id="liters" class="liters">Filming</a></li>
+          <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">Say</a>
+            <a href="#s-video" id="vids" class="vids">Say</a></li>
+        </ul>
+      </nav>
+      <figure>
+          <p class="inners">Current project writing and production  :<a class="inners" href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
+        </figure>
 		</header>
 
 <section class="inner">
-			<figure>
-         <p>MASTER JUILLET 2024/25</p>
-			</figure>
-
 			<aside id="press">
 				<article role="article" class="text">
 					<p><strong>WRITINGS</strong><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
@@ -186,16 +179,19 @@
 </section>
 
 <section id="switch-navigation">
-			<section class="inner"></section>
-		</section>
+  <figure>
+       <p>MASTER JUILLET 2024/25</p>
+    </figure>
 </section>
 
 <section id="section">
-
-
+  <section class="inner">
+  </section>
 </section>
+
 <section id="s-sign">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+  
 <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
       </aside>
  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
