--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
 <section id="s-sign">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-  
+
 <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
       </aside>
  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
@@ -222,7 +222,7 @@
 	</aside>
   <section id="s-signA">
   	    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
-<div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
+<div><img class="tempo" src="images/MJ-HLG-RD.jpg" alt="Sun"></div>
   	  <figure>
             <h1>02</h1>
       </figure>
@@ -306,7 +306,7 @@
 
 <section id="s-liter"  class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-<div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
+<div><img class="tempo" src="images/MJ-HLG-RD.jpg" alt="Sun"></div>
   </aside>
 <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
