--- a/index.html
+++ b/index.html
@@ -155,25 +155,25 @@
                 </g>
               </svg>
           </a></li>
-        <li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">Writings</a>
-            <a href="#content" id="texts" class="texts">Writings</a></li>
-          <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">Filming</a>
-            <a href="#s-liter" id="liters" class="liters">Filming</a></li>
-          <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">Say</a>
-            <a href="#s-video" id="vids" class="vids">Say</a></li>
+        <li id="text"><a style="display:none" href="#s-text" id="txt" class="txt">Écriture</a>
+            <a href="#content" id="texts" class="texts">Écriture</a></li>
+          <li id="lit"><a style="display:none" href="#s-liter" id="liter" class="liter">Tournage</a>
+            <a href="#s-liter" id="liters" class="liters">Tournage</a></li>
+          <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">Dire</a>
+            <a href="#s-video" id="vids" class="vids">Dire</a></li>
         </ul>
       </nav>
       <figure>
-          <p class="inners">Current project writing and production  :<a class="inners" href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
+          <p class="inners">Écriture et production du projet en cours  :<a class="inners" href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
         </figure>
 		</header>
 
 <section class="inner">
 			<aside id="press">
 				<article role="article" class="text">
-					<p><strong>WRITINGS</strong><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
-					<p><strong>FILMING</strong><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
-					<p><strong>SAY</strong><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+					<p><strong>Écriture</strong><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+					<p><strong>Tournage</strong><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+					<p><strong>Dire</strong><br /> Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son scriptslusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
 				</article>
 			</aside>
 </section>
