--- a/index.html
+++ b/index.html
@@ -118,17 +118,19 @@
 				<li><a id="tree" class="tree">Preparatory video</a></li>
 				<li><a id="trees" class="trees">Hide this content</a></li>
       </ul>
-      <nav role="navigation" id="nav">
-      <ul class="tabs">
-      <li id="1"><a style="display:none" href="#s-text" id="txt" class="txt"></a>
+
+      <!--  TODO CONTENT SECOND NAV-->
+      <section role="navigation">
+      <ul>
+      <li id="1"><a href="#" id="txt" class="txt"></a>
       <a href="#" id="texts" class="texts"></a></li>
-      <li id="2"><a style="display:none" href="#s-liter" id="liter" class="liter"></a>
-      <a href="#s-liter" id="liters" class="liters"></a></li>
-      <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid"></a>
-      <a href="#s-video" id="vids" class="vids"></a></li>
+      <li id="2"><a href="#" id="liter" class="liter"></a>
+      <a href="#" id="liters" class="liters"></a></li>
+      <li id="3"><a href="#" id="vid" class="vid"></a>
+      <a href="#" id="vids" class="vids"></a></li>
       </ul>
-      </nav>
-      <!--  TODO CONTENT -->
+    </section>
+            <!--  TODO CONTENT -->
       <nav role="navigation" id="navA">
         <ul class="tabs">
           <li id="sign"><a style="display:none" href="#s-sign" id="signs" class="signs">
@@ -203,6 +205,7 @@
  			    <h2>00</h2>
  	      </article>
      </aside>
+
     </aside>
    <aside id="sec-s-sign" class="page">
 
