--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
 <section id="switch-navigation">
   <figure>
-       <p>MASTER JUILLET 2024/25</p>
+       <!--<p>MASTER JUILLET 2024/25</p>-->
     </figure>
 </section>
 
