--- a/index.html
+++ b/index.html
@@ -193,11 +193,9 @@
 
 <section id="s-sign">
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-
 <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
       </aside>
  <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-
      <figure>
            <h2>WRITINGS</h2>
      </figure>
@@ -272,6 +270,7 @@
  </figure>
   <article>
   <h2>1.2</h2>
+    <p class="inners">DEV</p>
  </article>
 
     <article role="article" id="desc-s-sign" class="text">
@@ -363,6 +362,7 @@
 
 <section id="s-video"  class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+    <div><img class="tempo" src="images/MJ-HLG-OB.jpg" alt="Sun"></div>
 
   </aside>
 <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
