--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
 <section id="s-text" class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-
+    <div><img class="tempo" src="images/MJ-HLG-EC.jpg" alt="Sun"></div>
   </aside>
 <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 
