--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
 	    <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
       </aside>
- <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+ <aside class="page">
      <figure>
-           <h2>WRITINGS</h2>
+           <h1>00</h1>
      </figure>
  	      <article>
  			    <h2>00</h2>
@@ -214,46 +214,19 @@
       <h2>01</h2>
      </article>
 
-        <article role="article" id="desc-s-sign" class="text">
-
-        </article>
-         <article role="article" class="blanc">
-
-         </article>
+     <!--  TODO DEV CONTENT
+     <article role="article" id="desc-s-sign" class="text"></article>
+     <article role="article" class="blanc">
+     </article>
+     -->
 	</aside>
-  <section id="s-signA">
-  	    <aside class="pageA"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
-
-  	  <figure>
-            <h1>02</h1>
-      </figure>
-  	      <article>
-  			    <h2>02</h2>
-  	      <article>
-            <article role="article" id="desc-s-sign" class="text"></article>
-        </aside>
-
-   <aside id="sec-s-sign" class="page">
-
-       <figure>
-           <h1>02</h1>
-       </figure>
-        <article>
-           <h2>02</h2>
-       </article>
-
-      <article role="article" id="desc-s-sign" class="text"></article>
-     <article role="article" class="blanc"></article>
-  	</aside>
-  </section>
-
 </section>
 
 <section id="s-text" class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
     <div><img class="tempo" src="images/MJ-HLG-EC.jpg" alt="Sun"></div>
   </aside>
-<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+<aside class="page">
 
  <figure>
        <h1>1.2</h1>
@@ -270,47 +243,22 @@
  </figure>
   <article>
   <h2>1.2</h2>
-    <p class="inners">DEV</p>
  </article>
 
-    <article role="article" id="desc-s-sign" class="text">
-    </article>
-     <article role="article" class="blanc">
-     </article>
+ <!--  TODO DEV CONTENT
+ <article role="article" id="desc-s-sign" class="text"></article>
+ <article role="article" class="blanc">
+ </article>
+ -->
 </aside>
-<section id="s-signB">
-    <aside class="pageB"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
 
-  <figure>
-        <h1>1.2</h1>
-  </figure>
-      <article>
-        <h2>1.2</h2>
-      <article>
-        <article role="article" id="desc-s-sign" class="text"></article>
-
-    </aside>
-
-<aside id="sec-s-sign" class="page">
-
-   <figure>
-       <h1>02</h1>
-   </figure>
-    <article>
-       <h2>02</h2>
-   </article>
-
-  <article role="article" id="desc-s-sign" class="text"></article>
- <article role="article" class="blanc"></article>
-</aside>
-</section>
 </section>
 
 <section id="s-liter"  class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 <div><img class="tempo" src="images/MJ-HLG-RD.jpg" alt="Sun"></div>
   </aside>
-<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
+<aside class="page">
 
  <figure>
        <h1>1.3</h1>
@@ -328,45 +276,19 @@
   <h2>1.3</h2>
  </article>
 
-    <article role="article" id="desc-s-sign" class="text">
-    </article>
-     <article role="article" class="blanc">
-     </article>
+ <!--  TODO DEV CONTENT
+ <article role="article" id="desc-s-sign" class="text"></article>
+ <article role="article" class="blanc">
+ </article>
+ -->
 </aside>
-<section id="s-signC">
-    <aside class="pageC"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
-  <figure>
-        <h1>1.3</h1>
-  </figure>
-      <article>
-        <h2>1.3</h2>
-      <article>
-        <article role="article" id="desc-s-sign" class="text"></article>
-
-    </aside>
-
-<aside id="sec-s-sign" class="page">
-
-   <figure>
-       <h1>02</h1>
-   </figure>
-    <article>
-       <h2>02</h2>
-   </article>
-
-  <article role="article" id="desc-s-sign" class="text"></article>
- <article role="article" class="blanc"></article>
-</aside>
-</section>
 </section>
 
 <section id="s-video"  class="tab_content">
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
     <div><img class="tempo" src="images/MJ-HLG-OB.jpg" alt="Sun"></div>
-
   </aside>
-<aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
-
+<aside class="page">
  <figure>
        <h1>1.4</h1>
  </figure>
@@ -375,47 +297,21 @@
     </article>
    </article>
  </aside>
-</aside>
-<aside id="sec-s-sign" class="page">
 
+<aside id="sec-s-sign" class="page">
  <figure>
-   <h1>1.4</h1>
+     <h1>1.4</h1>
  </figure>
-  <article>
-  <h2>1.4</h2>
+   <article>
+     <h2>1.4</h2>
  </article>
 
-    <article role="article" id="desc-s-sign" class="text">
-    </article>
-     <article role="article" class="blanc">
-     </article>
+ <!--  TODO DEV CONTENT
+ <article role="article" id="desc-s-sign" class="text"></article>
+ <article role="article" class="blanc">
+ </article>
+ -->
 </aside>
-<section id="s-signD">
-    <aside class="pageD"><div><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c><c></c></div>
-
-  <figure>
-        <h1>1.4</h1>
-  </figure>
-      <article>
-        <h2>1.4</h2>
-      <article>
-        <article role="article" id="desc-s-sign" class="text"></article>
-
-    </aside>
-
-<aside id="sec-s-sign" class="page">
-
-   <figure>
-       <h1>02</h1>
-   </figure>
-    <article>
-       <h2>02</h2>
-   </article>
-
-  <article role="article" id="desc-s-sign" class="text"></article>
- <article role="article" class="blanc"></article>
-</aside>
-</section>
 </section>
 
 	<script src="scripts/jquery.mb.CSSAnimate.js" type="text/javascript"></script>
