--- a/index.html
+++ b/index.html
@@ -181,12 +181,14 @@
 </section>
 
 <section id="switch-navigation">
+
   <figure>
     </figure>
 </section>
 
 <section id="section">
   <section class="inner">
+
   </section>
 </section>
 
@@ -195,6 +197,16 @@
       <div><img class="tempo" src="images/MJ-HLG-AB.jpg" alt="Sun"></div>
       </aside>
 <aside class="page">
+
+  <!--  TODO CONTENT video cloudflare-->
+<div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+  <iframe
+      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/40d30c170803fbf3122caaf43e3aeacb/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F40d30c170803fbf3122caaf43e3aeacb%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600&primaryColor=%23000000"
+      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+      allowfullscreen="true"
+    ></iframe>
+ </div>
      <figure>
            <h1>00</h1>
      </figure>
@@ -223,6 +235,8 @@
 <div><img class="tempo" src="images/MJ-HLG-RD.jpg" alt="Sun"></div>
   </aside>
 <aside class="page">
+
+
 
  <figure>
        <h1>1.3</h1>
