--- a/index.html
+++ b/index.html
@@ -201,12 +201,13 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/40d30c170803fbf3122caaf43e3aeacb/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F40d30c170803fbf3122caaf43e3aeacb%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600&primaryColor=%23000000"
-      style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-      allowfullscreen="true"
-    ></iframe>
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/5c6ed9a499e00ca6d0289dd549ca49de/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F5c6ed9a499e00ca6d0289dd549ca49de%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
  </div>
+
      <figure>
            <h1>00</h1>
      </figure>
@@ -220,7 +221,18 @@
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
     <div><img class="tempo" src="images/MJ-HLG-EC.jpg" alt="Sun"></div>
   </aside>
+
 <aside class="page">
+  <!--  TODO CONTENT video cloudflare-->
+<div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+  <iframe
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/5c6ed9a499e00ca6d0289dd549ca49de/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F5c6ed9a499e00ca6d0289dd549ca49de%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
+ </div>
+
  <figure>
        <h1>1.2</h1>
  </figure>
@@ -234,8 +246,17 @@
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
 <div><img class="tempo" src="images/MJ-HLG-RD.jpg" alt="Sun"></div>
   </aside>
+  
 <aside class="page">
-
+  <!--  TODO CONTENT video cloudflare-->
+<div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+  <iframe
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/5c6ed9a499e00ca6d0289dd549ca49de/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F5c6ed9a499e00ca6d0289dd549ca49de%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
+ </div>
 
 
  <figure>
@@ -251,7 +272,18 @@
   <aside class="page"><div><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b></div>
     <div><img class="tempo" src="images/MJ-HLG-OB.jpg" alt="Sun"></div>
   </aside>
+
 <aside class="page">
+  <!--  TODO CONTENT video cloudflare-->
+<div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+  <iframe
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/5c6ed9a499e00ca6d0289dd549ca49de/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F5c6ed9a499e00ca6d0289dd549ca49de%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
+ </div>
+
  <figure>
        <h1>1.4</h1>
  </figure>
