--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </ul>
       </nav>
       <figure>
-          <p class="inners">Écriture et production du projet en cours  :<a class="inners" href="https://f.io/NPpIoZL9" rel="external">f.io/NPpIoZL9</a></p>
+          <p class="inners">Écriture et production du projet en cours  :<a class="inners" href="https://f.io/67lOEhX7" rel="external">f.io/67lOEhX7</a></p>
         </figure>
 		</header>
 
@@ -200,7 +200,7 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/dfa9837e840735952d598389c8995b97/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fdfa9837e840735952d598389c8995b97%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/784995ce6ca2fd0b42e93179a9e564bd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F784995ce6ca2fd0b42e93179a9e564bd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
     allowfullscreen="true"
@@ -225,7 +225,7 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/dfa9837e840735952d598389c8995b97/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fdfa9837e840735952d598389c8995b97%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/784995ce6ca2fd0b42e93179a9e564bd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F784995ce6ca2fd0b42e93179a9e564bd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
     allowfullscreen="true"
@@ -250,7 +250,7 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/dfa9837e840735952d598389c8995b97/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fdfa9837e840735952d598389c8995b97%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/784995ce6ca2fd0b42e93179a9e564bd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F784995ce6ca2fd0b42e93179a9e564bd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
     allowfullscreen="true"
@@ -276,7 +276,7 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/dfa9837e840735952d598389c8995b97/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fdfa9837e840735952d598389c8995b97%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/784995ce6ca2fd0b42e93179a9e564bd/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F784995ce6ca2fd0b42e93179a9e564bd%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
     allowfullscreen="true"
