--- a/index.html
+++ b/index.html
@@ -75,8 +75,18 @@
 
 			<article class="sp-content">
 				<ul class="sp-slider clearfix">
-					<li>
-						<h1>Vimeo 1</h1>
+          <li>
+            <!--  TODO CONTENT video cloudflare, & VIMEO
+					<li> <div style="position: relative;top:0;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
+            <iframe
+              src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/61331f9cc90d0d8dcf316e1b4e2c7df6/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F61331f9cc90d0d8dcf316e1b4e2c7df6%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+              style="border: none; position: absolute; top: 2em; left: 0; height: 100%; width: 100%;"
+              allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+              allowfullscreen="true"
+            ></iframe>
+           </div>
+            -->
+            <h1>Vimeo 1</h1>
 					</li>
 					<li>
 						<h1>Vimeo 2</h1>
@@ -200,19 +210,20 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/61331f9cc90d0d8dcf316e1b4e2c7df6/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F61331f9cc90d0d8dcf316e1b4e2c7df6%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-    allowfullscreen="true"
-  ></iframe>
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/56d6c0d67f03b676a149db6909cc19ad/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F56d6c0d67f03b676a149db6909cc19ad%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+     allowfullscreen="true"
+   ></iframe>
  </div>
 
-     <figure>
-           <h1>00</h1>
-     </figure>
- 	      <article>
- 			    <h2>00</h2>
- 	      </article>
+ <figure>
+       <h1>MASTER JUILLET</h1>
+ </figure>
+    <article>
+      <h2>WIP</h2>
+    </article>
+  </article>
      </aside>
 </section>
 
@@ -234,11 +245,12 @@
  </div>
 
  <figure>
-       <h1>1.2</h1>
+       <h1>MASTER JUILLET</h1>
  </figure>
     <article>
-      <h2>1.2</h2>
+      <h2>WIP</h2>
     </article>
+   </article
  </aside>
 </section>
 
@@ -261,11 +273,12 @@
 
 
  <figure>
-       <h1>1.3</h1>
+       <h1>MASTER JUILLET</h1>
  </figure>
     <article>
-      <h2>1.3</h2>
+      <h2>WIP</h2>
     </article>
+  </article>
  </aside>
 </section>
 
@@ -279,18 +292,18 @@
   <!--  TODO CONTENT video cloudflare-->
 <div style="position: relative;left:30%;padding-top: 22.734375%;width:40%; height:auto;">
   <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/61331f9cc90d0d8dcf316e1b4e2c7df6/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F61331f9cc90d0d8dcf316e1b4e2c7df6%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-    style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
-    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-    allowfullscreen="true"
-  ></iframe>
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/56d6c0d67f03b676a149db6909cc19ad/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F56d6c0d67f03b676a149db6909cc19ad%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+     allowfullscreen="true"
+   ></iframe>
  </div>
 
  <figure>
-       <h1>1.4</h1>
+       <h1>MASTER JUILLET</h1>
  </figure>
     <article>
-      <h2>1.4</h2>
+      <h2>WIP</h2>
     </article>
    </article>
  </aside>
